--- a/package.json
+++ b/package.json
@@ -26,16 +26,26 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
+    "@nrwl/node": "^10.3.0",
     "@nrwl/cli": "10.3.0",
+    "@nrwl/eslint-plugin-nx": "10.3.0",
+    "@nrwl/jest": "10.3.0",
     "@nrwl/workspace": "10.3.0",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
+    "jest": "26.2.2",
+    "prettier": "2.0.4",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "7.10.0",
-    "typescript": "~4.0.3",
-    "prettier": "2.0.4"
+    "typescript": "~4.0.3"
   }
 }
