feat: create testbed application with Express

--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,9 @@
   "projects": {
     "mixer-connection": {
       "tags": []
+    },
+    "ui-testbed": {
+      "tags": []
     }
   },
   "workspaceLayout": {
