--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
   },
   "private": true,
   "dependencies": {
+    "express": "4.17.1"
   },
   "devDependencies": {
-    "@nrwl/node": "^10.3.0",
     "@nrwl/cli": "10.3.0",
     "@nrwl/eslint-plugin-nx": "10.3.0",
+    "@nrwl/express": "^10.3.0",
     "@nrwl/jest": "10.3.0",
+    "@nrwl/node": "10.3.0",
     "@nrwl/workspace": "10.3.0",
+    "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "@typescript-eslint/eslint-plugin": "4.3.0",
