--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "private": true,
   "dependencies": {
     "express": "4.17.1",
+    "object-path": "^0.11.5",
+    "object-path-immutable": "^4.1.0",
     "rxjs": "^6.6.3",
     "ws": "^7.3.1"
   },
@@ -41,6 +43,7 @@
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@types/object-path": "^0.11.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
