chore: update Nx and dependencies (nx migrate)

--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "devDependencies": {
     "@nrwl/cli": "10.3.0",
-    "@nrwl/eslint-plugin-nx": "10.3.0",
-    "@nrwl/express": "^10.3.0",
-    "@nrwl/jest": "10.3.0",
-    "@nrwl/node": "10.3.0",
-    "@nrwl/workspace": "10.3.0",
+    "@nrwl/eslint-plugin-nx": "10.3.1",
+    "@nrwl/express": "10.3.1",
+    "@nrwl/jest": "10.3.1",
+    "@nrwl/node": "10.3.1",
+    "@nrwl/workspace": "10.3.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
