feat: add first version of fully-featured browser testbed
This commit introduces a fully-featured dynamic testbed based on Angular. It completely replaces the "old" Node-based test app and has more flexibility towards repeating code and feedback display.

Features available:
- Connection
- Master channels: mute, solo, fader, pan
- Aux channels: mute, fader, post, postproc
- FX channels: mute, fader, post

Closes #20

--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
   "npmScope": "soundcraft-ui",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
   },
   "implicitDependencies": {
     "workspace.json": "*",
@@ -26,8 +26,12 @@
     "mixer-connection": {
       "tags": []
     },
-    "ui-testbed": {
+    "testbed": {
       "tags": []
+    },
+    "testbed-e2e": {
+      "tags": [],
+      "implicitDependencies": ["testbed"]
     }
   },
   "workspaceLayout": {
