--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,9 +19,7 @@
       "@soundcraft-ui/mixer-connection": [
         "packages/mixer-connection/src/index.ts"
       ],
-      "soundcraft-ui-connection": [
-        "packages/mixer-connection/src/index.ts"
-      ]
+      "soundcraft-ui-connection": ["packages/mixer-connection/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
