--- a/package.json
+++ b/package.json
@@ -31,15 +31,30 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "testbed": "nx serve testbed"
   },
   "private": true,
   "dependencies": {
-    "express": "4.17.1",
+    "@angular/animations": "^10.1.0",
+    "@angular/common": "^10.1.0",
+    "@angular/compiler": "^10.1.0",
+    "@angular/core": "^10.1.0",
+    "@angular/forms": "^10.1.0",
+    "@angular/platform-browser": "^10.1.0",
+    "@angular/platform-browser-dynamic": "^10.1.0",
+    "@angular/router": "^10.1.0",
+    "bootstrap": "^4.5.3",
     "rxjs": "^6.6.3",
-    "ws": "^7.3.1"
+    "ws": "^7.3.1",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular/compiler-cli": "^10.1.0",
+    "@angular/language-service": "^10.1.0",
+    "@nrwl/angular": "^10.3.1",
     "@nrwl/cli": "10.3.0",
     "@nrwl/eslint-plugin-nx": "10.3.1",
     "@nrwl/express": "10.3.1",
@@ -49,17 +64,20 @@
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
-    "@types/object-path": "^0.11.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "codelyzer": "~5.0.1",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
     "prettier": "2.0.4",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.0.3",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "10.3.1"
   }
 }
