--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "bootstrap": "^4.5.3",
+    "isomorphic-ws": "^4.0.1",
     "rxjs": "^6.6.3",
     "ws": "^7.3.1",
     "zone.js": "^0.10.2"
