--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "testbed": "nx serve testbed"
+    "testbed": "nx serve testbed",
+    "release": "standard-version"
   },
   "private": true,
   "dependencies": {
@@ -57,6 +58,7 @@
     "@angular/language-service": "^10.1.0",
     "@nrwl/angular": "^10.3.1",
     "@nrwl/cli": "10.3.0",
+    "@nrwl/cypress": "10.3.1",
     "@nrwl/eslint-plugin-nx": "10.3.1",
     "@nrwl/express": "10.3.1",
     "@nrwl/jest": "10.3.1",
@@ -68,17 +70,17 @@
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "~5.0.1",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
     "prettier": "2.0.4",
+    "standard-version": "^9.0.0",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~4.0.3",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "10.3.1"
+    "typescript": "~4.0.3"
   }
 }
