--- a/package.json
+++ b/package.json
@@ -29,23 +29,23 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "testbed": "nx serve testbed",
-    "release": "standard-version"
+    "release": "standard-version",
+    "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.0",
-    "@angular/common": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/forms": "^10.1.0",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/router": "^10.1.0",
+    "@angular/animations": "11.0.5",
+    "@angular/common": "11.0.5",
+    "@angular/compiler": "11.0.5",
+    "@angular/core": "11.0.5",
+    "@angular/forms": "11.0.5",
+    "@angular/platform-browser": "11.0.5",
+    "@angular/platform-browser-dynamic": "11.0.5",
+    "@angular/router": "11.0.5",
     "bootstrap": "^4.5.3",
     "isomorphic-ws": "^4.0.1",
     "rxjs": "^6.6.3",
@@ -53,34 +53,35 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/compiler-cli": "^10.1.0",
-    "@angular/language-service": "^10.1.0",
-    "@nrwl/angular": "^10.3.1",
-    "@nrwl/cli": "10.3.0",
-    "@nrwl/cypress": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.3.1",
-    "@nrwl/express": "10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/node": "10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@angular-devkit/build-angular": "0.1100.5",
+    "@angular/compiler-cli": "11.0.5",
+    "@angular/language-service": "11.0.5",
+    "@nrwl/angular": "11.0.17",
+    "@nrwl/cli": "11.0.17",
+    "@nrwl/cypress": "11.0.17",
+    "@nrwl/eslint-plugin-nx": "11.0.17",
+    "@nrwl/express": "11.0.17",
+    "@nrwl/jest": "11.0.17",
+    "@nrwl/node": "11.0.17",
+    "@nrwl/tao": "11.0.17",
+    "@nrwl/workspace": "11.0.17",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "6.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
-    "prettier": "2.0.4",
+    "prettier": "2.1.2",
     "standard-version": "^9.0.0",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "~4.0.3"
   }
 }
