--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "postinstall": "ngcc --properties es2015 browser module main",
     "testbed": "nx serve testbed",
     "release": "standard-version",
     "workspace-generator": "nx workspace-generator"
@@ -56,23 +56,23 @@
     "@angular-devkit/build-angular": "0.1102.6",
     "@angular/compiler-cli": "11.2.7",
     "@angular/language-service": "11.2.7",
-    "@nrwl/angular": "11.5.2",
-    "@nrwl/cli": "11.5.2",
-    "@nrwl/cypress": "11.5.2",
-    "@nrwl/eslint-plugin-nx": "11.5.2",
-    "@nrwl/express": "11.5.2",
-    "@nrwl/jest": "11.5.2",
-    "@nrwl/node": "11.5.2",
-    "@nrwl/tao": "11.5.2",
-    "@nrwl/workspace": "11.5.2",
+    "@nrwl/angular": "12.0.0",
+    "@nrwl/cli": "12.0.0",
+    "@nrwl/cypress": "12.0.0",
+    "@nrwl/eslint-plugin-nx": "12.0.0",
+    "@nrwl/express": "12.0.0",
+    "@nrwl/jest": "12.0.0",
+    "@nrwl/node": "12.0.0",
+    "@nrwl/tao": "12.0.0",
+    "@nrwl/workspace": "12.0.0",
     "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "codelyzer": "6.0.1",
     "cypress": "^4.1.0",
-    "dotenv": "6.2.0",
-    "eslint": "7.10.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
@@ -81,6 +81,6 @@
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "~4.0.3"
+    "typescript": "4.1.4"
   }
 }
