--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.7",
     "@angular/common": "11.2.7",
     "@angular/compiler": "11.2.7",
     "@angular/core": "11.2.7",
@@ -54,13 +53,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1102.6",
+    "@angular-eslint/eslint-plugin": "2.1.0",
+    "@angular-eslint/eslint-plugin-template": "2.1.0",
+    "@angular-eslint/template-parser": "2.1.0",
     "@angular/compiler-cli": "11.2.7",
     "@angular/language-service": "11.2.7",
     "@nrwl/angular": "12.0.0",
     "@nrwl/cli": "12.0.0",
-    "@nrwl/cypress": "12.0.0",
     "@nrwl/eslint-plugin-nx": "12.0.0",
-    "@nrwl/express": "12.0.0",
     "@nrwl/jest": "12.0.0",
     "@nrwl/node": "12.0.0",
     "@nrwl/tao": "12.0.0",
@@ -69,18 +69,18 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
-    "codelyzer": "6.0.1",
-    "cypress": "^4.1.0",
     "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "prettier": "2.2.1",
     "standard-version": "^9.0.0",
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
     "typescript": "4.1.4"
   }
 }
