chore: migrate to Nx 13, split workspace.json
- migrate to Nx 13
- migrate workspace.json to v2
- split workspace.json into smaller project.json files

--- a/nx.json
+++ b/nx.json
@@ -21,14 +21,6 @@
       }
     }
   },
-  "projects": {
-    "mixer-connection": {
-      "tags": []
-    },
-    "testbed": {
-      "tags": []
-    }
-  },
   "workspaceLayout": {
     "appsDir": "packages",
     "libsDir": "packages"
@@ -40,5 +32,18 @@
         "projects": "dependencies"
       }
     ]
+  },
+  "cli": {
+    "defaultCollection": "@nrwl/angular",
+    "packageManager": "npm"
+  },
+  "defaultProject": "testbed",
+  "generators": {
+    "@nrwl/angular:application": {
+      "unitTestRunner": "jest"
+    },
+    "@nrwl/angular:library": {
+      "unitTestRunner": "jest"
+    }
   }
 }
