refactor(testbed): strictTemplates / Bootstrap 5

--- a/packages/testbed/tsconfig.json
+++ b/packages/testbed/tsconfig.json
@@ -12,5 +12,11 @@
     {
       "path": "./tsconfig.editor.json"
     }
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  }
 }
