--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@nrwl/eslint-plugin-nx": "13.6.1",
     "@nrwl/jest": "13.6.1",
     "@nrwl/node": "13.6.1",
+    "@nrwl/nx-cloud": "^13.1.3",
     "@nrwl/tao": "13.6.1",
     "@nrwl/workspace": "13.6.1",
     "@types/jest": "27.0.2",
