--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "13.1.3",
-    "@angular/compiler": "13.1.3",
-    "@angular/core": "13.1.3",
-    "@angular/forms": "13.1.3",
-    "@angular/platform-browser": "13.1.3",
-    "@angular/platform-browser-dynamic": "13.1.3",
-    "@angular/router": "13.1.3",
+    "@angular/common": "13.2.7",
+    "@angular/compiler": "13.2.7",
+    "@angular/core": "13.2.7",
+    "@angular/forms": "13.2.7",
+    "@angular/platform-browser": "13.2.7",
+    "@angular/platform-browser-dynamic": "13.2.7",
+    "@angular/router": "13.2.7",
     "bootstrap": "^5.1.3",
     "isomorphic-ws": "^4.0.1",
     "rxjs": "^6.6.3",
@@ -52,20 +52,20 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.1.4",
+    "@angular-devkit/build-angular": "13.2.6",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/compiler-cli": "13.1.3",
-    "@angular/language-service": "13.1.3",
-    "@nrwl/angular": "13.6.1",
+    "@angular/compiler-cli": "13.2.7",
+    "@angular/language-service": "13.2.7",
+    "@nrwl/angular": "13.9.5",
     "@nrwl/cli": "13.6.1",
-    "@nrwl/eslint-plugin-nx": "13.6.1",
-    "@nrwl/jest": "13.6.1",
-    "@nrwl/node": "13.6.1",
-    "@nrwl/nx-cloud": "^13.1.3",
-    "@nrwl/tao": "13.6.1",
-    "@nrwl/workspace": "13.6.1",
+    "@nrwl/eslint-plugin-nx": "13.9.5",
+    "@nrwl/jest": "13.9.5",
+    "@nrwl/js": "13.9.5",
+    "@nrwl/node": "13.9.5",
+    "@nrwl/nx-cloud": "13.2.1",
+    "@nrwl/workspace": "13.9.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -77,7 +77,8 @@
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
+    "jest-preset-angular": "11.1.1",
+    "nx": "13.9.5",
     "prettier": "2.5.1",
     "standard-version": "^9.0.0",
     "ts-jest": "27.0.5",
