--- a/packages/testbed/project.json
+++ b/packages/testbed/project.json
@@ -49,20 +49,30 @@
               "maximumError": "10kb"
             }
           ]
+        },
+        "development": {
+          "buildOptimizer": false,
+          "optimization": false,
+          "vendorChunk": true,
+          "extractLicenses": false,
+          "sourceMap": true,
+          "namedChunks": true
         }
       },
+      "defaultConfiguration": "production",
       "outputs": ["{options.outputPath}"]
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
-      "options": {
-        "browserTarget": "testbed:build"
-      },
       "configurations": {
         "production": {
           "browserTarget": "testbed:build:production"
+        },
+        "development": {
+          "browserTarget": "testbed:build:development"
         }
-      }
+      },
+      "defaultConfiguration": "development"
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
