--- a/packages/testbed/tsconfig.json
+++ b/packages/testbed/tsconfig.json
@@ -18,5 +18,8 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "compilerOptions": {
+    "target": "es2020"
   }
 }
