--- a/package.json
+++ b/package.json
@@ -31,58 +31,57 @@
     "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main",
+    "postinstall": "ngcc --properties es2020 browser module main",
     "testbed": "nx serve testbed",
     "release": "standard-version",
     "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "13.2.7",
-    "@angular/compiler": "13.2.7",
-    "@angular/core": "13.2.7",
-    "@angular/forms": "13.2.7",
-    "@angular/platform-browser": "13.2.7",
-    "@angular/platform-browser-dynamic": "13.2.7",
-    "@angular/router": "13.2.7",
-    "bootstrap": "^5.1.3",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "bootstrap": "^5.2.3",
     "isomorphic-ws": "^4.0.1",
     "rxjs": "^6.6.3",
     "ws": "^7.4.1",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.2.6",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/compiler-cli": "13.2.7",
-    "@angular/language-service": "13.2.7",
-    "@nrwl/angular": "13.9.5",
-    "@nrwl/cli": "13.6.1",
-    "@nrwl/eslint-plugin-nx": "13.9.5",
-    "@nrwl/jest": "13.9.5",
-    "@nrwl/js": "13.9.5",
-    "@nrwl/node": "13.9.5",
-    "@nrwl/nx-cloud": "13.2.1",
-    "@nrwl/workspace": "13.9.5",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@angular-devkit/build-angular": "^15.0.1",
+    "@angular-devkit/core": "^15.0.1",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@nrwl/angular": "15.2.1",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/js": "15.2.1",
+    "@nrwl/node": "15.2.1",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.2.1",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
     "dotenv": "10.0.0",
-    "eslint": "^7.22.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.1.1",
-    "nx": "13.9.5",
-    "prettier": "2.5.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.3",
+    "nx": "15.2.1",
+    "prettier": "2.8.0",
     "standard-version": "^9.0.0",
-    "ts-jest": "27.0.5",
-    "ts-node": "9.1.1",
-    "typescript": "4.5.5"
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4"
   }
 }
