--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^4.0.1",
-    "rxjs": "^6.6.3",
+    "rxjs": "~7.5.0",
     "ws": "^7.4.1",
     "zone.js": "~0.12.0"
   },
