--- a/packages/testbed/project.json
+++ b/packages/testbed/project.json
@@ -3,8 +3,9 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "generators": {
-    "@schematics/angular:component": {
-      "style": "scss"
+    "@nrwl/angular:component": {
+      "style": "scss",
+      "skipTests": true
     }
   },
   "sourceRoot": "packages/testbed/src",
