chore: emit all commit types to changelog

--- a/.versionrc
+++ b/.versionrc
@@ -34,5 +34,43 @@
       "filename": "packages/testbed/package-lock.json",
       "type": "json"
     }
+  ],
+  "types": [
+    {
+      "type": "feat",
+      "section": "Features"
+    },
+    {
+      "type": "fix",
+      "section": "Bug Fixes"
+    },
+    {
+      "type": "chore",
+      "section": "Other"
+    },
+    {
+      "type": "build",
+      "section": "Other"
+    },
+    {
+      "type": "docs",
+      "section": "Other"
+    },
+    {
+      "type": "style",
+      "section": "Other"
+    },
+    {
+      "type": "refactor",
+      "section": "Other"
+    },
+    {
+      "type": "perf",
+      "section": "Other"
+    },
+    {
+      "type": "test",
+      "section": "Other"
+    }
   ]
 }
