--- a/packages/testbed/.eslintrc.json
+++ b/packages/testbed/.eslintrc.json
@@ -8,7 +8,12 @@
         "project": ["packages/testbed/tsconfig.app.json", "packages/testbed/tsconfig.spec.json"],
         "createDefaultProgram": true
       },
-      "extends": ["prettier", "prettier/@typescript-eslint"],
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates"
+      ],
       "rules": {
         "@angular-eslint/component-selector": [
           "error",
@@ -41,6 +46,7 @@
     },
     {
       "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
     }
   ]
