--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/builder": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/common": "15.1.1",
+    "@angular/compiler": "15.1.1",
+    "@angular/core": "15.1.1",
+    "@angular/forms": "15.1.1",
+    "@angular/platform-browser": "15.1.1",
+    "@angular/platform-browser-dynamic": "15.1.1",
+    "@angular/router": "15.1.1",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^4.0.1",
     "rxjs": "~7.5.0",
@@ -53,20 +53,20 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.1",
-    "@angular-devkit/core": "^15.0.1",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@nrwl/angular": "15.3.0",
-    "@nrwl/cli": "15.3.0",
-    "@nrwl/eslint-plugin-nx": "15.3.0",
-    "@nrwl/jest": "15.3.0",
-    "@nrwl/js": "15.3.0",
-    "@nrwl/node": "15.3.0",
+    "@angular-devkit/build-angular": "15.1.2",
+    "@angular-devkit/core": "15.1.2",
+    "@angular-eslint/eslint-plugin": "15.2.0",
+    "@angular-eslint/eslint-plugin-template": "15.2.0",
+    "@angular-eslint/template-parser": "15.2.0",
+    "@angular/compiler-cli": "15.1.1",
+    "@nrwl/angular": "15.5.3",
+    "@nrwl/cli": "15.5.3",
+    "@nrwl/eslint-plugin-nx": "15.5.3",
+    "@nrwl/jest": "15.5.3",
+    "@nrwl/js": "15.5.3",
+    "@nrwl/node": "15.5.3",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/workspace": "15.3.0",
+    "@nrwl/workspace": "15.5.3",
     "@types/jest": "28.1.8",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.44.0",
@@ -78,7 +78,7 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.3",
-    "nx": "15.3.0",
+    "nx": "15.5.3",
     "prettier": "2.8.0",
     "standard-version": "^9.0.0",
     "ts-jest": "28.0.8",
