--- a/package.json
+++ b/package.json
@@ -55,18 +55,20 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "15.1.2",
     "@angular-devkit/core": "15.1.2",
+    "@angular-devkit/schematics": "~15.1.0",
     "@angular-eslint/eslint-plugin": "15.2.0",
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
     "@angular/compiler-cli": "15.1.1",
-    "@nrwl/angular": "15.6.3",
-    "@nrwl/cli": "15.6.3",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
-    "@nrwl/node": "15.6.3",
+    "@nrwl/angular": "15.7.1",
+    "@nrwl/cli": "15.7.1",
+    "@nrwl/eslint-plugin-nx": "15.7.1",
+    "@nrwl/jest": "15.7.1",
+    "@nrwl/js": "15.7.1",
+    "@nrwl/node": "15.7.1",
     "@nrwl/nx-cloud": "15.0.3",
-    "@nrwl/workspace": "15.6.3",
+    "@nrwl/workspace": "15.7.1",
+    "@schematics/angular": "~15.1.0",
     "@types/jest": "28.1.8",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.44.0",
@@ -78,7 +80,7 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.3",
-    "nx": "15.6.3",
+    "nx": "15.7.1",
     "prettier": "2.8.0",
     "standard-version": "^9.0.0",
     "ts-jest": "28.0.8",
