--- a/package.json
+++ b/package.json
@@ -31,60 +31,58 @@
     "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2020 browser module main",
     "testbed": "nx serve testbed",
     "release": "standard-version",
     "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/builder": "^15.0.0",
-    "@angular/common": "15.1.1",
-    "@angular/compiler": "15.1.1",
-    "@angular/core": "15.1.1",
-    "@angular/forms": "15.1.1",
-    "@angular/platform-browser": "15.1.1",
-    "@angular/platform-browser-dynamic": "15.1.1",
-    "@angular/router": "15.1.1",
+    "@angular-eslint/builder": "^16.0.0",
+    "@angular/common": "16.0.1",
+    "@angular/compiler": "16.0.1",
+    "@angular/core": "16.0.1",
+    "@angular/forms": "16.0.1",
+    "@angular/platform-browser": "16.0.1",
+    "@angular/platform-browser-dynamic": "16.0.1",
+    "@angular/router": "16.0.1",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^4.0.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "7.8.1",
     "ws": "^7.4.1",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.1.2",
-    "@angular-devkit/core": "15.1.2",
-    "@angular-devkit/schematics": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "15.2.0",
-    "@angular-eslint/eslint-plugin-template": "15.2.0",
-    "@angular-eslint/template-parser": "15.2.0",
-    "@angular/compiler-cli": "15.1.1",
-    "@nrwl/angular": "15.7.1",
-    "@nrwl/cli": "15.7.1",
-    "@nrwl/eslint-plugin-nx": "15.7.1",
-    "@nrwl/jest": "15.7.1",
-    "@nrwl/js": "15.7.1",
-    "@nrwl/node": "15.7.1",
-    "@nrwl/nx-cloud": "15.0.3",
-    "@nrwl/workspace": "15.7.1",
-    "@schematics/angular": "~15.1.0",
-    "@types/jest": "28.1.8",
+    "@angular-devkit/build-angular": "16.0.1",
+    "@angular-devkit/core": "16.0.1",
+    "@angular-devkit/schematics": "~16.0.1",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
+    "@angular/compiler-cli": "16.0.1",
+    "@nx/angular": "16.1.4",
+    "@nx/eslint-plugin": "16.1.4",
+    "@nx/jest": "16.1.4",
+    "@nx/js": "16.1.4",
+    "@nx/node": "16.1.4",
+    "@nx/workspace": "16.1.4",
+    "@schematics/angular": "~16.0.1",
+    "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
-    "nx": "15.7.1",
-    "prettier": "2.8.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-preset-angular": "13.1.1",
+    "nx": "16.1.4",
+    "nx-cloud": "16.0.5",
+    "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "5.0.4"
   }
 }
