--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^4.0.1",
     "rxjs": "7.8.1",
+    "tslib": "^2.3.0",
     "ws": "^7.4.1",
     "zone.js": "~0.13.0"
   },
@@ -64,12 +65,14 @@
     "@nx/jest": "16.1.4",
     "@nx/js": "16.1.4",
     "@nx/node": "16.1.4",
+    "@nx/vite": "16.1.4",
     "@nx/workspace": "16.1.4",
     "@schematics/angular": "~16.0.1",
     "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
+    "@vitest/ui": "^0.31.0",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.1.0",
@@ -77,12 +80,18 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-preset-angular": "13.1.1",
+    "jsdom": "~20.0.3",
     "nx": "16.1.4",
     "nx-cloud": "16.0.5",
     "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vite": "^4.3.4",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.31.0"
   }
 }
