--- a/packages/mixer-connection/.eslintrc.json
+++ b/packages/mixer-connection/.eslintrc.json
@@ -1,13 +1,9 @@
 {
-  "extends": "../../.eslintrc.json",
+  "extends": ["../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
-  "rules": {},
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "parserOptions": {
-        "project": ["packages/mixer-connection/tsconfig.*?.json"]
-      },
       "rules": {}
     },
     {
