--- a/packages/mixer-connection/package.json
+++ b/packages/mixer-connection/package.json
@@ -2,6 +2,7 @@
   "name": "soundcraft-ui-connection",
   "description": "Library for controlling the Soundcraft Ui series audio mixers",
   "version": "1.5.0",
+  "type": "commonjs",
   "license": "MIT",
   "author": "Ferdinand Malcher <ferdinand@malcher.media>",
   "repository": {
