--- a/packages/mixer-connection/tsconfig.json
+++ b/packages/mixer-connection/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "forceConsistentCasingInFileNames": false,
+    "strict": false,
+    "noImplicitOverride": false,
+    "noPropertyAccessFromIndexSignature": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": false
+  },
   "files": [],
   "include": [],
   "references": [
