--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/builder": "^16.0.0",
-    "@angular/common": "16.0.1",
-    "@angular/compiler": "16.0.1",
-    "@angular/core": "16.0.1",
-    "@angular/forms": "16.0.1",
-    "@angular/platform-browser": "16.0.1",
-    "@angular/platform-browser-dynamic": "16.0.1",
-    "@angular/router": "16.0.1",
+    "@angular/common": "16.2.2",
+    "@angular/compiler": "16.2.2",
+    "@angular/core": "16.2.2",
+    "@angular/forms": "16.2.2",
+    "@angular/platform-browser": "16.2.2",
+    "@angular/platform-browser-dynamic": "16.2.2",
+    "@angular/router": "16.2.2",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^5.0.0",
     "rxjs": "7.8.1",
@@ -53,26 +53,26 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.0.1",
-    "@angular-devkit/core": "16.0.1",
-    "@angular-devkit/schematics": "~16.0.1",
+    "@angular-devkit/build-angular": "16.2.2",
+    "@angular-devkit/core": "16.2.2",
+    "@angular-devkit/schematics": "16.2.2",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/compiler-cli": "16.0.1",
-    "@nx/angular": "16.1.4",
-    "@nx/eslint-plugin": "16.1.4",
-    "@nx/jest": "16.1.4",
-    "@nx/js": "16.1.4",
-    "@nx/node": "16.1.4",
-    "@nx/vite": "16.1.4",
-    "@nx/workspace": "16.1.4",
-    "@schematics/angular": "~16.0.1",
+    "@angular/compiler-cli": "16.2.2",
+    "@nx/angular": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/node": "16.8.1",
+    "@nx/vite": "16.8.1",
+    "@nx/workspace": "16.8.1",
+    "@schematics/angular": "16.2.2",
     "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "@typescript-eslint/parser": "5.58.0",
-    "@vitest/ui": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "@vitest/ui": "0.32.4",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.1.0",
@@ -80,18 +80,18 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-preset-angular": "13.1.1",
-    "jsdom": "~20.0.3",
-    "nx": "16.1.4",
-    "nx-cloud": "16.0.5",
+    "jsdom": "22.1.0",
+    "nx": "16.8.1",
+    "nx-cloud": "16.4.0",
     "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4",
-    "vite": "^4.3.4",
-    "vite-plugin-dts": "~1.7.1",
+    "typescript": "5.1.6",
+    "vite": "4.4.9",
+    "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.31.0"
+    "vitest": "0.32.4"
   }
 }
