fix: fix ESLint execution with Nx package

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
+    "lint": "nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -37,7 +37,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/builder": "^16.0.0",
     "@angular/common": "16.2.2",
     "@angular/compiler": "16.2.2",
     "@angular/core": "16.2.2",
@@ -56,9 +55,9 @@
     "@angular-devkit/build-angular": "16.2.2",
     "@angular-devkit/core": "16.2.2",
     "@angular-devkit/schematics": "16.2.2",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
     "@angular/compiler-cli": "16.2.2",
     "@nx/angular": "16.8.1",
     "@nx/eslint-plugin": "16.8.1",
@@ -81,6 +80,7 @@
     "jest-environment-jsdom": "29.5.0",
     "jest-preset-angular": "13.1.1",
     "jsdom": "22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "16.8.1",
     "nx-cloud": "16.4.0",
     "prettier": "^2.8.8",
