--- a/package.json
+++ b/package.json
@@ -37,57 +37,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "16.2.2",
-    "@angular/compiler": "16.2.2",
-    "@angular/core": "16.2.2",
-    "@angular/forms": "16.2.2",
-    "@angular/platform-browser": "16.2.2",
-    "@angular/platform-browser-dynamic": "16.2.2",
-    "@angular/router": "16.2.2",
+    "@angular/common": "17.0.3",
+    "@angular/compiler": "17.0.3",
+    "@angular/core": "17.0.3",
+    "@angular/forms": "17.0.3",
+    "@angular/platform-browser": "17.0.3",
+    "@angular/platform-browser-dynamic": "17.0.3",
+    "@angular/router": "17.0.3",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^5.0.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "ws": "^8.13.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.2",
-    "@angular-devkit/core": "16.2.2",
-    "@angular-devkit/schematics": "16.2.2",
-    "@angular-eslint/eslint-plugin": "16.2.0",
-    "@angular-eslint/eslint-plugin-template": "16.2.0",
-    "@angular-eslint/template-parser": "16.2.0",
-    "@angular/compiler-cli": "16.2.2",
-    "@nx/angular": "16.10.0",
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/node": "16.10.0",
-    "@nx/vite": "16.10.0",
-    "@nx/workspace": "16.10.0",
-    "@schematics/angular": "16.2.2",
+    "@angular-devkit/build-angular": "17.0.1",
+    "@angular-devkit/core": "17.0.1",
+    "@angular-devkit/schematics": "17.0.1",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/compiler-cli": "17.0.3",
+    "@nx/angular": "17.1.2",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/node": "17.1.2",
+    "@nx/vite": "17.1.2",
+    "@nx/workspace": "17.1.2",
+    "@schematics/angular": "17.0.1",
     "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
     "@vitest/ui": "0.32.4",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "13.1.1",
+    "jest-preset-angular": "13.1.4",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "16.10.0",
-    "nx-cloud": "16.5.2",
+    "nx": "17.1.2",
     "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
+    "typescript": "5.2.2",
     "vite": "4.4.9",
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
