--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "ws": "^8.13.0",
-    "zone.js": "0.14.3"
+    "zone.js": "^0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.1",
