--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "19.6.5",
     "prettier": "^2.8.8",
+    "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
