--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
       - docusaurus # temporary during development
+    paths:
+      - 'docs/**'
 
 jobs:
   build:
