--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '!docs'
   pull_request:
+    paths:
+      - '!docs'
 
 # Needed for nx-set-shas when run on the main branch
 permissions:
