chore: add docs page to package.json

--- a/packages/mixer-connection/package.json
+++ b/packages/mixer-connection/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/fmalcher/soundcraft-ui/issues"
   },
-  "homepage": "https://github.com/fmalcher/soundcraft-ui/tree/main/packages/mixer-connection",
+  "homepage": "https://fmalcher.github.io/soundcraft-ui",
   "keywords": [
     "Soundcraft Ui",
     "Mixer control",
