--- a/package.json
+++ b/package.json
@@ -63,18 +63,19 @@
     "@nx/eslint-plugin": "20.0.2",
     "@nx/jest": "20.0.2",
     "@nx/js": "20.0.2",
+    "@nx/linter": "^19.8.4",
     "@nx/node": "20.0.2",
     "@nx/vite": "20.0.2",
     "@nx/workspace": "20.0.2",
     "@schematics/angular": "18.2.1",
     "@types/jest": "29.5.12",
     "@types/node": "^18.16.9",
-    "@typescript-eslint/eslint-plugin": "8.10.0",
-    "@typescript-eslint/parser": "8.10.0",
-    "@typescript-eslint/utils": "^8.10.0",
+    "@typescript-eslint/eslint-plugin": "8.2.0",
+    "@typescript-eslint/parser": "8.2.0",
+    "@typescript-eslint/utils": "^8.2.0",
     "@vitest/ui": "1.5.1",
     "dotenv": "10.0.0",
-    "eslint": "^9.12.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.7.0",
