chore: nx migrate 20.0.6

--- a/packages/testbed/project.json
+++ b/packages/testbed/project.json
@@ -81,7 +81,7 @@
       "outputs": ["{workspaceRoot}/coverage/packages/testbed"]
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["packages/testbed/**/*.ts", "packages/testbed/**/*.html"]
