chore: nx migrate, use Angular 19

--- a/package.json
+++ b/package.json
@@ -37,36 +37,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "18.2.0",
-    "@angular/compiler": "18.2.0",
-    "@angular/core": "18.2.0",
-    "@angular/forms": "18.2.0",
-    "@angular/platform-browser": "18.2.0",
-    "@angular/platform-browser-dynamic": "18.2.0",
-    "@angular/router": "18.2.0",
+    "@angular/common": "19.0.3",
+    "@angular/compiler": "19.0.3",
+    "@angular/core": "19.0.3",
+    "@angular/forms": "19.0.3",
+    "@angular/platform-browser": "19.0.3",
+    "@angular/platform-browser-dynamic": "19.0.3",
+    "@angular/router": "19.0.3",
     "bootstrap": "^5.2.3",
     "modern-isomorphic-ws": "1.0.5",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "ws": "^8.18.0",
-    "zone.js": "^0.14.3"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.1",
-    "@angular-devkit/core": "18.2.1",
-    "@angular-devkit/schematics": "18.2.1",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
-    "@angular/compiler-cli": "18.2.0",
-    "@nx/angular": "20.1.4",
-    "@nx/eslint-plugin": "20.1.4",
-    "@nx/jest": "20.1.4",
-    "@nx/js": "20.1.4",
-    "@nx/node": "20.1.4",
-    "@nx/vite": "20.1.4",
-    "@nx/workspace": "20.1.4",
-    "@schematics/angular": "18.2.1",
+    "@angular-devkit/build-angular": "19.0.4",
+    "@angular-devkit/core": "19.0.4",
+    "@angular-devkit/schematics": "19.0.4",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/compiler-cli": "19.0.3",
+    "@nx/angular": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/node": "20.2.2",
+    "@nx/vite": "20.2.2",
+    "@nx/workspace": "20.2.2",
+    "@schematics/angular": "19.0.4",
     "@types/jest": "29.5.12",
     "@types/node": "^18.16.9",
     "@types/ws": "^8.5.12",
@@ -80,20 +80,23 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.1.1",
+    "jest-preset-angular": "14.4.2",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.1.4",
+    "nx": "20.2.2",
     "prettier": "^2.8.8",
     "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.5.4",
+    "typescript": "5.6.3",
     "vite": "5.1.1",
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "1.5.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
