--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Thumbs.db
 .nx/cache
 .nx/workspace-data
 **/vite.config.{js,ts,mjs,mts,cjs,cts}.timestamp*
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
