--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "19.0.3",
-    "@angular/compiler": "19.0.3",
-    "@angular/core": "19.0.3",
-    "@angular/forms": "19.0.3",
-    "@angular/platform-browser": "19.0.3",
-    "@angular/platform-browser-dynamic": "19.0.3",
-    "@angular/router": "19.0.3",
+    "@angular/common": "19.2.9",
+    "@angular/compiler": "19.2.9",
+    "@angular/core": "19.2.9",
+    "@angular/forms": "19.2.9",
+    "@angular/platform-browser": "19.2.9",
+    "@angular/platform-browser-dynamic": "19.2.9",
+    "@angular/router": "19.2.9",
     "bootstrap": "^5.2.3",
     "modern-isomorphic-ws": "1.0.5",
     "rxjs": "7.8.1",
@@ -52,21 +52,21 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.4",
-    "@angular-devkit/core": "19.0.4",
-    "@angular-devkit/schematics": "19.0.4",
-    "@angular-eslint/eslint-plugin": "19.0.2",
-    "@angular-eslint/eslint-plugin-template": "19.0.2",
-    "@angular-eslint/template-parser": "19.0.2",
-    "@angular/compiler-cli": "19.0.3",
-    "@nx/angular": "20.2.2",
-    "@nx/eslint-plugin": "20.2.2",
-    "@nx/jest": "20.2.2",
-    "@nx/js": "20.2.2",
-    "@nx/node": "20.2.2",
-    "@nx/vite": "20.2.2",
-    "@nx/workspace": "20.2.2",
-    "@schematics/angular": "19.0.4",
+    "@angular-devkit/build-angular": "19.2.9",
+    "@angular-devkit/core": "19.2.9",
+    "@angular-devkit/schematics": "19.2.9",
+    "@angular-eslint/eslint-plugin": "19.3.0",
+    "@angular-eslint/eslint-plugin-template": "19.3.0",
+    "@angular-eslint/template-parser": "19.3.0",
+    "@angular/compiler-cli": "19.2.9",
+    "@nx/angular": "21.0.2",
+    "@nx/eslint-plugin": "21.0.2",
+    "@nx/jest": "21.0.2",
+    "@nx/js": "21.0.2",
+    "@nx/node": "21.0.2",
+    "@nx/vite": "21.0.2",
+    "@nx/workspace": "21.0.2",
+    "@schematics/angular": "19.2.9",
     "@types/jest": "29.5.12",
     "@types/node": "^18.16.9",
     "@types/ws": "^8.5.12",
@@ -76,22 +76,23 @@
     "@vitest/ui": "1.5.1",
     "dotenv": "10.0.0",
     "eslint": "^9.9.1",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.4.2",
+    "jiti": "2.4.2",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.2.2",
+    "nx": "21.0.2",
     "prettier": "^2.8.8",
     "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.6.3",
-    "vite": "5.1.1",
-    "vite-plugin-dts": "2.3.0",
+    "typescript": "5.7.3",
+    "vite": "6.3.5",
+    "vite-plugin-dts": "4.5.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "1.5.1"
