chore: nx migrate to 22.3 and Angular 21, update deps

--- a/packages/testbed/project.json
+++ b/packages/testbed/project.json
@@ -78,7 +78,8 @@
     "test": {
       "executor": "@nx/jest:jest",
       "options": {
-        "jestConfig": "packages/testbed/jest.config.ts"
+        "jestConfig": "packages/testbed/jest.config.ts",
+        "tsConfig": "packages/testbed/tsconfig.spec.json"
       },
       "outputs": ["{workspaceRoot}/coverage/packages/testbed"]
     },
