--- a/package.json
+++ b/package.json
@@ -37,61 +37,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "19.2.9",
-    "@angular/compiler": "19.2.9",
-    "@angular/core": "19.2.9",
-    "@angular/forms": "19.2.9",
-    "@angular/platform-browser": "19.2.9",
-    "@angular/platform-browser-dynamic": "19.2.9",
-    "@angular/router": "19.2.9",
+    "@angular/common": "21.0.6",
+    "@angular/compiler": "21.0.6",
+    "@angular/core": "21.0.6",
+    "@angular/forms": "21.0.6",
+    "@angular/platform-browser": "21.0.6",
+    "@angular/platform-browser-dynamic": "21.0.6",
+    "@angular/router": "21.0.6",
     "bootstrap": "^5.2.3",
     "modern-isomorphic-ws": "1.0.5",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "ws": "^8.18.0",
-    "zone.js": "0.15.0"
+    "zone.js": "0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.9",
-    "@angular-devkit/core": "19.2.9",
-    "@angular-devkit/schematics": "19.2.9",
-    "@angular-eslint/eslint-plugin": "19.3.0",
-    "@angular-eslint/eslint-plugin-template": "19.3.0",
-    "@angular-eslint/template-parser": "19.3.0",
-    "@angular/compiler-cli": "19.2.9",
-    "@nx/angular": "21.0.2",
-    "@nx/eslint-plugin": "21.0.2",
-    "@nx/jest": "21.0.2",
-    "@nx/js": "21.0.2",
-    "@nx/node": "21.0.2",
-    "@nx/vite": "21.0.2",
-    "@nx/workspace": "21.0.2",
-    "@schematics/angular": "19.2.9",
-    "@types/jest": "29.5.12",
-    "@types/node": "^18.16.9",
+    "@angular-devkit/build-angular": "21.0.4",
+    "@angular-devkit/core": "21.0.4",
+    "@angular-devkit/schematics": "21.0.4",
+    "@angular-eslint/eslint-plugin": "21.1.0",
+    "@angular-eslint/eslint-plugin-template": "21.1.0",
+    "@angular-eslint/template-parser": "21.1.0",
+    "@angular/compiler-cli": "21.0.6",
+    "@nx/angular": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/jest": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/node": "22.3.3",
+    "@nx/vite": "22.3.3",
+    "@nx/vitest": "22.3.3",
+    "@nx/workspace": "22.3.3",
+    "@schematics/angular": "21.0.4",
+    "@types/jest": "30.0.0",
+    "@types/node": "^22.19.2",
     "@types/ws": "^8.5.12",
-    "@typescript-eslint/eslint-plugin": "8.2.0",
-    "@typescript-eslint/parser": "8.2.0",
-    "@typescript-eslint/utils": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "@typescript-eslint/utils": "^8.50.1",
     "@vitest/ui": "1.5.1",
     "dotenv": "10.0.0",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.4.2",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
+    "jest-preset-angular": "16.0.0",
+    "jest-util": "30.0.5",
     "jiti": "2.4.2",
-    "jsdom": "22.1.0",
+    "jsdom": "27.4.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.0.2",
+    "nx": "22.3.3",
     "prettier": "^2.8.8",
     "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.4.6",
     "ts-node": "10.9.1",
-    "typescript": "5.7.3",
-    "vite": "6.3.5",
+    "typescript": "5.9.3",
+    "vite": "7.3.0",
     "vite-plugin-dts": "4.5.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
