--- a/packages/testbed/tsconfig.json
+++ b/packages/testbed/tsconfig.json
@@ -20,6 +20,9 @@
     "strictTemplates": true
   },
   "compilerOptions": {
-    "target": "es2020"
+    "target": "es2020",
+    "moduleResolution": "bundler",
+    "module": "preserve",
+    "lib": ["dom", "es2022"]
   }
 }
