--- a/package.json
+++ b/package.json
@@ -61,43 +61,40 @@
     "@angular/compiler-cli": "21.0.6",
     "@nx/angular": "22.3.3",
     "@nx/eslint-plugin": "22.3.3",
-    "@nx/jest": "22.3.3",
     "@nx/js": "22.3.3",
     "@nx/node": "22.3.3",
     "@nx/vite": "22.3.3",
-    "@nx/vitest": "22.3.3",
+    "@nx/vitest": "^22.3.3",
     "@nx/workspace": "22.3.3",
     "@schematics/angular": "21.0.4",
-    "@types/jest": "30.0.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "^1.15.7",
+    "@swc/helpers": "~0.5.11",
     "@types/node": "^22.19.2",
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "@typescript-eslint/utils": "^8.50.1",
-    "@vitest/ui": "1.5.1",
+    "@vitest/coverage-v8": "^4.0.0",
+    "@vitest/ui": "^4.0.16",
     "dotenv": "10.0.0",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jest": "30.2.0",
-    "jest-environment-jsdom": "30.2.0",
-    "jest-preset-angular": "16.0.0",
-    "jest-util": "30.0.5",
     "jiti": "2.4.2",
     "jsdom": "27.4.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.3.3",
-    "prettier": "^2.8.8",
+    "prettier": "~3.6.2",
     "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
-    "ts-jest": "29.4.6",
     "ts-node": "10.9.1",
     "typescript": "5.9.3",
     "vite": "7.3.0",
     "vite-plugin-dts": "4.5.3",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "1.5.1"
+    "vitest": "^4.0.16"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
