--- a/packages/testbed/tsconfig.editor.json
+++ b/packages/testbed/tsconfig.editor.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "types": ["node"]
   },
-  "exclude": ["jest.config.ts"]
+  "exclude": []
 }
