--- a/package.json
+++ b/package.json
@@ -45,11 +45,10 @@
     "@angular/platform-browser-dynamic": "21.0.6",
     "@angular/router": "21.0.6",
     "bootstrap": "^5.2.3",
-    "modern-isomorphic-ws": "1.0.5",
-    "rxjs": "7.8.1",
+    "modern-isomorphic-ws": "^1.0.6",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "ws": "^8.18.0",
-    "zone.js": "0.16.0"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "21.0.4",
