chore: require Node.js >= 22
Node.js 22+ is now required since the library relies on the native
WebSocket implementation available from this version onwards.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "release": "standard-version",
     "workspace-generator": "nx workspace-generator"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "21.0.6",
