--- a/packages/mixer-connection/package.json
+++ b/packages/mixer-connection/package.json
@@ -20,6 +20,9 @@
     "Audio mixer",
     "Sound"
   ],
+  "engines": {
+    "node": ">=22"
+  },
   "dependencies": {
     "modern-isomorphic-ws": "1.0.5",
     "ws": "^8.18.0"
