refactor: use native WebSocket instead of modern-isomorphic-ws
Remove the modern-isomorphic-ws and ws dependencies. Node.js 22+
provides a native WebSocket implementation, so no polyfill is needed.

--- a/packages/mixer-connection/package.json
+++ b/packages/mixer-connection/package.json
@@ -23,8 +23,5 @@
   "engines": {
     "node": ">=22"
   },
-  "dependencies": {
-    "modern-isomorphic-ws": "1.0.5",
-    "ws": "^8.18.0"
-  }
+  "dependencies": {}
 }
