--- a/package.json
+++ b/package.json
@@ -48,10 +48,8 @@
     "@angular/platform-browser-dynamic": "21.0.6",
     "@angular/router": "21.0.6",
     "bootstrap": "^5.2.3",
-    "modern-isomorphic-ws": "^1.0.6",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "ws": "^8.18.3"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "21.0.4",
@@ -73,7 +71,6 @@
     "@swc/core": "^1.15.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^22.19.2",
-    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "@typescript-eslint/utils": "^8.50.1",
