chore: upgrade nx to 22.5.1 and Angular to 21.1.5

--- a/package.json
+++ b/package.json
@@ -40,36 +40,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "21.0.6",
-    "@angular/compiler": "21.0.6",
-    "@angular/core": "21.0.6",
-    "@angular/forms": "21.0.6",
-    "@angular/platform-browser": "21.0.6",
-    "@angular/platform-browser-dynamic": "21.0.6",
-    "@angular/router": "21.0.6",
+    "@angular/common": "21.1.5",
+    "@angular/compiler": "21.1.5",
+    "@angular/core": "21.1.5",
+    "@angular/forms": "21.1.5",
+    "@angular/platform-browser": "21.1.5",
+    "@angular/platform-browser-dynamic": "21.1.5",
+    "@angular/router": "21.1.5",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "21.0.4",
-    "@angular-devkit/core": "21.0.4",
-    "@angular-devkit/schematics": "21.0.4",
+    "@angular-devkit/build-angular": "21.1.4",
+    "@angular-devkit/core": "21.1.4",
+    "@angular-devkit/schematics": "21.1.4",
     "@angular-eslint/eslint-plugin": "21.1.0",
     "@angular-eslint/eslint-plugin-template": "21.1.0",
     "@angular-eslint/template-parser": "21.1.0",
-    "@angular/compiler-cli": "21.0.6",
-    "@nx/angular": "22.3.3",
-    "@nx/eslint-plugin": "22.3.3",
-    "@nx/js": "22.3.3",
-    "@nx/node": "22.3.3",
-    "@nx/vite": "22.3.3",
-    "@nx/vitest": "^22.3.3",
-    "@nx/workspace": "22.3.3",
-    "@schematics/angular": "21.0.4",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "^1.15.7",
-    "@swc/helpers": "~0.5.11",
+    "@angular/compiler-cli": "21.1.5",
+    "@nx/angular": "22.5.1",
+    "@nx/eslint-plugin": "22.5.1",
+    "@nx/js": "22.5.1",
+    "@nx/node": "22.5.1",
+    "@nx/vite": "22.5.1",
+    "@nx/vitest": "22.5.1",
+    "@nx/workspace": "22.5.1",
+    "@schematics/angular": "21.1.4",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.15.8",
+    "@swc/helpers": "0.5.18",
     "@types/node": "^22.19.2",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
@@ -83,7 +83,7 @@
     "jiti": "2.4.2",
     "jsdom": "27.4.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "22.3.3",
+    "nx": "22.5.1",
     "prettier": "~3.6.2",
     "rollup-plugin-copy": "^3.5.0",
     "standard-version": "^9.0.0",
